# ci-cafelibro-g5

./: .gitignore  README.md  data.json  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
src/cafelibro/: books.py  cli.py  loan_book.py  members.py  queries.py  returns.py  storage.py
tests/: test_books.py  test_loan_book.py  test_members.py  test_overdue.py  test_queries.py  test_returns.py  test_storage.py
