[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cafelibro"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
cafelibro = "cafelibro.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
